--- a/index.htm
+++ b/index.htm
@@ -275,6 +275,7 @@ $(function(){
           <li><i class="clients-use">USE</i></li>
           <li><i class="clients-verico">華譽國際</i></li>
           <li><i class="clients-wayfong clients-2x">唯豐肉鬆</i></li>
+          <li><i class="clients-yamaha-motors clients-2x">Yamaha Motors</i></li>
           <li><i class="clients-zynet clients-2x">Zynet</i></li>
         </ul>
       </div>
