--- a/index.htm
+++ b/index.htm
@@ -11,8 +11,6 @@
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/apple-touch-icon-ipad-retina.png" />
 <title>Yisen</title>
 <link type="image/x-icon" rel="shortcut icon" href="images/favicon.ico" />
-<link type="text/css" rel="stylesheet" href="css/reset.css" />
-<link type="text/css" rel="stylesheet" href="css/font-face.css" />
 <link type="text/css" rel="stylesheet" href="css/base.css" />
 <link type="text/css" rel="stylesheet" href="css/icons.css" />
 <link type="text/css" rel="stylesheet" href="css/mqbp1.css" />
@@ -32,10 +30,45 @@
 <!--Browser detection-->
 <link type="text/css" rel="stylesheet" href="plugin/browser-detection/browser-detection.css" />
 <script type="text/javascript" src="plugin/browser-detection/browser-detection.js"></script>
-<script type="text/javascript" src="plugin/browser-detection/browser-config.js"></script>
 
 <script type="text/javascript" src="plugin/modernizr-2.6.2.js"></script>
-<script type="text/javascript" src="js/conditional.js"></script>
+<script type="text/javascript">
+// Exclude the iPad
+Modernizr.addTest('ipad', function () {
+  return !!navigator.userAgent.match(/iPad/i);
+});
+
+// Exclude the iPhone
+Modernizr.addTest('iphone', function () {
+  return !!navigator.userAgent.match(/iPhone/i);
+});
+
+// Exclude the iPod touch
+Modernizr.addTest('ipod', function () {
+  return !!navigator.userAgent.match(/iPod/i);
+});
+
+// Exclude android phones and tablets
+Modernizr.addTest('android', function () {
+  return !!navigator.userAgent.match(/android/i);
+});
+
+Modernizr.addTest('appleios', function () {
+  return (Modernizr.ipad || Modernizr.ipod || Modernizr.iphone);
+});
+
+
+Modernizr.load([
+  {
+    test:Modernizr.hashchange,
+    nope:'plugin/jquery/jquery.ba-hashchange.min.js'
+  },
+  {
+    test:Modernizr.appleios,
+    yep:'plugin/ios-viewport-scaling-bug-fix.js'
+  }
+]);
+</script>
 <script type="text/javascript" src="js/mousewheelEvents.js"></script>
 <script type="text/javascript" src="plugin/jquery/jquery-1.8.3.min.js"></script>
 <script type="text/javascript" src="plugin/jquery/retina/jquery.retina.js"></script>
