--- a/index.htm
+++ b/index.htm
@@ -75,6 +75,15 @@
             <!--width2圖片規格：寬404px,高200px-->
             <!--height2圖片規格：寬200px,高>404px-->
             <!--width2height2圖片規格：寬>404px,高>404px-->
+            <figure class="thumb height2" data-project="台灣大車隊">
+              <a href="ajax-taiwantaxi-mobile-2015.htm" class="thumbLink"><img src="upload/works/2015/taiwantaxi-mobile-thumb.png" alt=""></a>
+            </figure>
+            <figure class="thumb height2" data-project="京站Qsquare Official">
+              <a href="ajax-qsquare-mobile-2015.htm" class="thumbLink"><img src="upload/works/2015/qsquare-mobile-thumb.png" alt=""></a>
+            </figure>
+            <figure class="thumb width2" data-project="永豐餘生技 E-commerce">
+              <a href="ajax-green-n-safe-2015.htm" class="thumbLink"><img src="upload/works/2015/green-n-safe-thumb.jpg" alt=""></a>
+            </figure>
             <figure class="thumb width2" data-project="台北貿易 Official">
               <a href="ajax-tpetrade.htm" class="thumbLink"><img src="upload/works/2014/tpetrade-thumb.png" alt=""></a>
             </figure>
