--- a/index.htm
+++ b/index.htm
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimal-ui" />
-  <meta name="author" content="Yisen Liu, yisenliu@gmail.com" />
-  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Yisen Liu, yisenliu@gmail.com">
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="apple-touch-icon-precomposed" sizes="57x57" href="images/apple-touch-icon-iphone.png" />
   <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/apple-touch-icon-iphone-retina.png" />
   <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/apple-touch-icon-ipad.png" />
