--- a/index.htm
+++ b/index.htm
@@ -58,10 +58,7 @@
             <li data-num="168">
               <p>0</p>Completed Projects</li>
           </ul>
-          <div class="home-technical-panes">
-            <i class="icon-arrow-down icon-clear scrollDown"></i>
-            <!--inset json data here-->
-          </div>
+          <i class="icon-arrow-down icon-clear scrollDown"></i>
         </div>
       </div>
       <div class="section worksDiv" data-section="#works">
@@ -75,6 +72,9 @@
             <!--width2圖片規格：寬404px,高200px-->
             <!--height2圖片規格：寬200px,高>404px-->
             <!--width2height2圖片規格：寬>404px,高>404px-->
+            <figure class="thumb height2" data-project="永豐餘生技(mobile)">
+              <a href="ajax-green-n-safe-mobile-2016.htm" class="thumbLink"><img srcset="upload/works/2016/green-n-safe-mobile-thumb.png 1x,upload/works/2016/green-n-safe-mobile-thumb@2x.png 2x" alt=""></a>
+            </figure>
             <figure class="thumb height2" data-project="台灣大車隊">
               <a href="ajax-taiwantaxi-mobile-2015.htm" class="thumbLink"><img src="upload/works/2015/taiwantaxi-mobile-thumb.png" alt=""></a>
             </figure>
