--- a/index.htm
+++ b/index.htm
@@ -2,30 +2,39 @@
 <html lang="zh">
 
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="author" content="Yisen Liu, yisenliu@gmail.com">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge, chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <meta name="format-detection" content="telephone=no">
+  <link type="text/plain" rel="author" href="/humans.txt">
+  <!-- favicons start -->
+  <link rel="manifest" href="/images/favicons/manifest.json">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="theme-color" content="#fff">
+  <meta name="application-name" content="Works">
+  <link rel="apple-touch-icon" sizes="57x57" href="/images/favicons/apple-touch-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/images/favicons/apple-touch-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/images/favicons/apple-touch-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/images/favicons/apple-touch-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/images/favicons/apple-touch-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/images/favicons/apple-touch-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/images/favicons/apple-touch-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/images/favicons/apple-touch-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/images/favicons/apple-touch-icon-180x180.png">
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="images/apple-touch-icon-iphone.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/apple-touch-icon-iphone-retina.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/apple-touch-icon-ipad.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/apple-touch-icon-ipad-retina.png" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="Works">
+  <link rel="icon" type="image/png" sizes="228x228" href="/images/favicons/coast-228x228.png">
+  <meta name="msapplication-TileColor" content="#fff">
+  <meta name="msapplication-TileImage" content="/images/favicons/mstile-144x144.png">
+  <meta name="msapplication-config" content="/images/favicons/browserconfig.xml">
+  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/images/favicons/favicon-16x16.png">
+  <link rel="shortcut icon" href="/images/favicons/favicon.ico">
+  <!-- favicons end -->  
   <title>Yisen</title>
-  <link type="image/x-icon" rel="shortcut icon" href="images/favicon.ico" />
-  <link type="text/css" rel="stylesheet" href="css/base.css" />
-  <link type="text/css" rel="stylesheet" href="css/icons.css" />
-  <link type="text/css" rel="stylesheet" href="css/mqbp1.css" />
-  <link type="text/css" rel="stylesheet" href="css/mqbp2.css" />
-  <link type="text/css" rel="stylesheet" href="css/mqbp3.css" />
-  <link type="text/css" rel="stylesheet" href="css/isotope.css" />
-  <link type="text/css" rel="stylesheet" href="plugin/jquery/royalslider/royalslider.css" />
-  <link type="text/css" rel="stylesheet" href="css/royalslider_skins/rsLightbox.css" />
-  <link type="text/css" rel="stylesheet" href="plugin/browser-detection/browser-detection.css" />
-  <!--[if lt IE 9]>
-  <script type="text/javascript" src="plugin/css3-mediaqueries.js"></script>
-  <link type="text/css" rel="stylesheet" href="css/legacy.css" />
-  <![endif]-->
+  <link rel="stylesheet" href="css/app.min.css">
 </head>
 
 <body class="">
@@ -53,9 +62,9 @@
           <ul class="home-statistics">
             <li data-num="13">
               <p>0</p>Years of Experience</li>
-            <li data-num="26">
+            <li data-num="28">
               <p>0</p>Clients Served</li>
-            <li data-num="168">
+            <li data-num="170">
               <p>0</p>Completed Projects</li>
           </ul>
           <i class="icon-arrow-down icon-clear scrollDown"></i>
@@ -305,17 +314,22 @@
   <div id="fullscr">
     <a href="javascript:;" class="closeBtn"><i class="icon-close icon-2x"></i></a>
   </div>
-  <script type="text/javascript" src="plugin/browser-detection/browser-detection.js"></script>
-  <script type="text/javascript" src="plugin/modernizr-2.6.2.js"></script>
-  <script type="text/javascript" src="js/mousewheelEvents.js"></script>
-  <script type="text/javascript" src="plugin/jquery/jquery-1.8.3.min.js"></script>
-  <script type="text/javascript" src="plugin/jquery/retina/jquery.retina.js"></script>
-  <script type="text/javascript" src="plugin/jquery/scrollStopped.js"></script>
-  <script type="text/javascript" src="plugin/jquery/royalslider/jquery.royalslider.min.js"></script>
-  <script type="text/javascript" src="plugin/jquery/isotope/jquery.isotope.min.js"></script>
-  <script type="text/javascript" src="js/drawRingChart.js"></script>
-  <script type="text/javascript" src="js/drawTimeline.js"></script>
-  <script type="text/javascript" src="js/app.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>
+  <script>
+    window.Modernizr || document.write('<script src="plugin/modernizr-2.6.2.js"><\/script>');
+
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+  <script>
+    window.jQuery || document.write('<script src="plugin/jquery/jquery-1.8.3.min.js"><\/script>');
+
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/1.5.25/jquery.isotope.js"></script>
+  <script>
+    window.jQuery || document.write('<script src="plugin/jquery/isotope/jquery.isotope.min.js"><\/script>');
+
+  </script>
+  <script src="js/app.min.js"></script>
 </body>
 
 </html>
