modify css path

--- a/index.htm
+++ b/index.htm
@@ -33,18 +33,10 @@
   <link rel="shortcut icon" href="images/favicons/favicon.ico">
   <!-- favicons end -->  
   <title>Yisen</title>
-  <!-- build:css css/app.min.css -->
-  <link type="text/css" rel="stylesheet" href="css/base.css" />
-  <link type="text/css" rel="stylesheet" href="css/icons.css" />
-  <link type="text/css" rel="stylesheet" href="css/mqbp1.css" />
-  <link type="text/css" rel="stylesheet" href="css/mqbp2.css" />
-  <link type="text/css" rel="stylesheet" href="css/mqbp3.css" />
-  <link type="text/css" rel="stylesheet" href="css/isotope.css" />
-  <link type="text/css" rel="stylesheet" href="css/print.css" />
+  <link rel="stylesheet" href="css/app.min.css">
   <link type="text/css" rel="stylesheet" href="plugin/jquery/royalslider/royalslider.css" />
   <link type="text/css" rel="stylesheet" href="css/royalslider_skins/rsLightbox.css" />
   <link type="text/css" rel="stylesheet" href="plugin/browser-detection/browser-detection.css" />
-  <!-- endbuild -->
 </head>
 
 <body class="">
@@ -339,17 +331,7 @@
     window.jQuery || document.write('<script src="plugin/jquery/isotope/jquery.isotope.min.js"><\/script>');
 
   </script>
-  <!-- build:js js/app.min.js -->
-  <script src="plugin/browser-detection/browser-detection.js"></script>
-  <!-- <script src="bower_components/jReject/js/jquery.reject.js"></script> -->
-  <script src="js/mousewheelEvents.js"></script>
-  <script src="plugin/jquery/retina/jquery.retina.js"></script>
-  <script src="plugin/jquery/scrollStopped.js"></script>
-  <script src="plugin/jquery/royalslider/jquery.royalslider.min.js"></script>
-  <script src="js/drawRingChart.js"></script>
-  <script src="js/drawTimeline.js"></script>
-  <script src="js/app.js"></script>
-  <!-- endbuild -->
+  <script src="js/app.min.js"></script>
 </body>
 
 </html>
