modified:   css/app.min.css 	modified:   index.htm

--- a/index.htm
+++ b/index.htm
@@ -34,6 +34,9 @@
   <!-- favicons end -->  
   <title>Yisen</title>
   <link rel="stylesheet" href="css/app.min.css">
+  <link type="text/css" rel="stylesheet" href="plugin/jquery/royalslider/royalslider.css" />
+  <link type="text/css" rel="stylesheet" href="css/royalslider_skins/rsLightbox.css" />
+  <link type="text/css" rel="stylesheet" href="plugin/browser-detection/browser-detection.css" />
 </head>
 
 <body class="">
